<resources>
    <string name="app_name">ScrumSoftware</string>
    <string name="manifest">Manifest</string>

    <string name="content">Content</string>

    <string name="introduce1_first">Individuals and interactions</string>
    <string name="introduce1_end">over processes and tools</string>
    <string name="introduce2_first">Working software</string>
    <string name="introduce2_end">over comprehensive documentation</string>
    <string name="introduce3_first">Custom collaboration</string>
    <string name="introduce3_end">over contract negotiation</string>
    <string name="introduce4_first">Responding to change</string>
    <string name="introduce4_end">over following a plain</string>

    <string name="next_btn">Click go to next page</string>

    <string name="row1col1">What </string>
    <string name="row2col1">Strategic \n Planning \t</string>
    <string name="row3col1">Tactical \n Planning \t</string>
    <string name="row4col1">When </string>
    <string name="row5col1">Time Box </string>
    <string name="row6col1">Leading \n role </string>
    <string name="row7col1">Actions </string>
    <string name="row8col1">Output </string>


    <!-- Monday Planning Topic 1 (WHAT)-->
    <string name="mon1_col2_row1">Planning Topic 1 (What)</string>
    <string name="mon1_col2_row2">Product Owner (Explain the Product Vision)</string>
    <string name="mon1_col2_row3">Dev-Team (Scrum Master facilitates)</string>
    <string name="mon1_col2_row4">Sprint Start</string>
    <string name="mon1_col2_row5">Max : 2 hours</string>
    <string name="mon1_col2_row6">Dev-team,Scrum Master,Product Owner</string>
    <string name="mon1_col2_row7">Product Owner will present the maintained Product Backlog. The Dev-Team can get the size of the Stories (L,M,S) , they can get the order based on risk and customer valie . Team members will ask to clarify Requirements.</string>
    <string name="mon1_col2_row8">Backlog Items e.g User Stories , Selected potential Product Backlog Items, Acceptance Criteria</string>

    <!-- Monday Planning Topic 2 (How) -->
    <string name="mon1_col3_row1">Planning Topic 2 (How)</string>
    <string name="mon1_col3_row2">Dev-Team</string>
    <string name="mon1_col3_row3">Dev-Team (Scrum Master facilitates)</string>
    <string name="mon1_col3_row4">Sprint Start</string>
    <string name="mon1_col3_row5">Max : 2 hours</string>
    <string name="mon1_col3_row6">Dev-team,Scrum Master</string>
    <string name="mon1_col3_row7">Create initial tasks, estimation ( maybe with Planning Poker )  \n Discussion about design and architecture</string>
    <string name="mon1_col3_row8">Final Sprint Backlog : all initial Tasks for the upcoming Spring that need to be done</string>

    <!--Monday Sprint forecast -->

    <string name="mon1_col4_row1">Spring forecast</string>
    <string name="mon1_col4_row2">Dev-Team</string>
    <string name="mon1_col4_row3">Dev-Team </string>
    <string name="mon1_col4_row4">Sprint start</string>
    <string name="mon1_col4_row5"> </string>
    <string name="mon1_col4_row6">Dev-team,Scrum Master,Product Owner</string>
    <string name="mon1_col4_row7">Based on the velocity , the Development Team will prepare the forecast</string>
    <string name="mon1_col4_row8">Forecast : The  Team "'s'" commitment for the Sprint Backlog</string>

    <!-- Sprint goal communication -->

    <string name="mon1_col5_row1">Spring Goal communication</string>
    <string name="mon1_col5_row2">Dev-Team</string>
    <string name="mon1_col5_row3">Dev-Team </string>
    <string name="mon1_col5_row4">Sprint Start</string>
    <string name="mon1_col5_row5">Define the Sprint Goal before and share the updates after planning</string>
    <string name="mon1_col5_row6">Stakeholder,Product Owner</string>
    <string name="mon1_col5_row7">Product Owner communicates the forecast to Stakeholder</string>
    <string name="mon1_col5_row8">Product Vision</string>

    <!-- Backlog Ordering -->
    <string name="thu2_col2_row1">Backlog Ordering</string>
    <string name="thu2_col2_row2">Product Owner</string>
    <string name="thu2_col2_row3">Product Owner</string>
    <string name="thu2_col2_row4">Middle of the second week</string>
    <string name="thu2_col2_row5">Around 1-3 hours</string>
    <string name="thu2_col2_row6">Product Owner,Stakeholder</string>
    <string name="thu2_col2_row7">The Product Owner reviews the updated Product Backlog with the Priority e.g : with MosCoW based on the Customer need and value</string>
    <string name="thu2_col2_row8">Revised Product Backlog and Release Plan</string>

    <!-- Sprint Review -->
    <string name="fri2_col2_row1">Sprint Review</string>
    <string name="fri2_col2_row2">Product Owner</string>
    <string name="fri2_col2_row3">Dev-Team (Scrum Master facilitates)</string>
    <string name="fri2_col2_row4">Sprint End</string>
    <string name="fri2_col2_row5">Max : 2 hours</string>
    <string name="fri2_col2_row6">Dev-team,Scrum Master,Product Owner,Stakeholder</string>
    <string name="fri2_col2_row7">The Dev-Team will show the work that they could finish at the real environment . Changes may come out of this meeting and will be added to the Product backlog. The product Owner will define which stories are finally DONE ( based on acceptance criteria and DoD).</string>
    <string name="fri2_col2_row8">Product Owner will accept or reject the presented and showed features</string>

    <!-- Start Workshop-->
    <string name="tue1_col2_row1">Start Workshop</string>
    <string name="tue1_col2_row2">Product Owner</string>
    <string name="tue1_col2_row3">Product Owner</string>
    <string name="tue1_col2_row4">Once at the beginning of the Project</string>
    <string name="tue1_col2_row5">Depends on the project</string>
    <string name="tue1_col2_row6">Product Owner, Stakeholder</string>
    <string name="tue1_col2_row7">The product Owner will work together with the stakeholder to prepare the Backlog Items e.g User Stories. Product Owner and Stakeholder review the Product Backlog . They add , update , modify the new and available stories . They may use the Story mapping approach</string>
    <string name="tue1_col2_row8">Story based on clarifications at the Product Backlog , Update Priority ( MoSCoW ) . \n Based on the customer needs</string>

    <!-- Product Backlog refinement -->
    <string name="mon2_col2_row1">Product Backlog refinement</string>
    <string name="mon2_col2_row2">Product Owner</string>
    <string name="mon2_col2_row3">Product Owner</string>
    <string name="mon2_col2_row4">Second week , before Review</string>
    <string name="mon2_col2_row5">max 10% capacity of the Development Team</string>
    <string name="mon2_col2_row6">Product Owner, Stakeholder,Dev-Team</string>
    <string name="mon2_col2_row7">The Product Owner also should spend his time with the Dev-Team and review the updated Product Backlog. Dev-Team can update the estimation with Points. Everybody in the Scrum Team has to understand the Customer needs</string>
    <string name="mon2_col2_row8">Updated Product Backlog , estimation of the whole Product Backlog to keep it up to date.</string>

    <!-- Pair Work -->
    <string name="wed1_col2_row1">Pair Work</string>
    <string name="wed1_col2_row2">Dev-Team</string>
    <string name="wed1_col2_row3">Dev-Team</string>
    <string name="wed1_col2_row4">During the Sprint</string>
    <string name="wed1_col2_row5">Depends on the Dev-Team</string>
    <string name="wed1_col2_row6">Dev-Team</string>
    <string name="wed1_col2_row7">The Dev-Team can work with Pair programming . Other Dev-team members can verify which available solution is the best fit for customer needs.</string>
    <string name="wed1_col2_row8">To increase the quality, productivity and get knowledge exchange.</string>

    <!-- Sprint Retrospective -->
    <string name="fri2_col3_row1">Sprint Retrospective</string>
    <string name="fri2_col3_row2">Dev-Team (SM facilitates ) , Product Owner</string>
    <string name="fri2_col3_row3">Dev-Team (SM facilitates ) , Product Owner</string>
    <string name="fri2_col3_row4">Sprint End</string>
    <string name="fri2_col3_row5">Max : 1.5 hours</string>
    <string name="fri2_col3_row6">Dev-team,Scrum Master,Product Owner</string>
    <string name="fri2_col3_row7">The Dev-Team will identify what was working well and what was not working during the last Sprint . This is basic for the continuous improvement and increasing the productivity and quality ( for the Scrum Team , Organisation and Product ). The Product Owner also should be involved.</string>
    <string name="fri2_col3_row8">At least 3 impediments should be selected, which will be solved in the next Sprint.</string>

    <!-- About -->
    <string name="about_row1">Scrum meeting just gets mobilized with Scrool! \n \n Designed for Scrum practitioners who "'" re looking for an easy and convenient Scrum assistant.
        Scrool , the mobile Scrum toolkit is now available for everybody. The application combines all the
    basic tools required to kick start your Scrum process. \n \n
    Scroll provides specific tools for various use of different roles throughout the Scrum process.
    Whether you "'" re a developer , a Scrum Master or a PO , Scrool is able to assist you. \n \n
    Scrool features essentital functions : \n \n
        <b>PLANNING POKER*</b> \n
        _Assist team make estimation for each user story. \n
        _Optimize meeting outputs. \n \n
        <b>TIMER</b> \n
        _Organize and manage their meetings effectively . \n
        _Optimize meeting outputs . \n
        _Support team to deliver the best output in shortest time. \n \n
        <b>CASH TIMER</b> \n
        _Cash Timer calculates and converts lateness and extension into financial figures i.e money.
        This conversion helps the Team visualize the cost of timebox violations , and understand the importance of timeliness.
    </string>








    <string name="about">About</string>
    <string name="sprint">Sprint</string>
    <string name="scrum_artifact">Scrum Artifacts</string>
    <string name="role">Role</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week1">Week 1</string>
    <string name="week2">Week 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="scrum_master">Scrum Master</string>
    <string name="dev_team">Development Team</string>
    <string name="product_owner">Product Owner</string>

    <string name="scrum_master_content">Responsible for increasing productivity.\nResponsible for using the Scrum framework.\nFacilitate, serve and coach the Team, PO &amp; Organisation</string>
    <string name="dev_team_cotent">Responsible for development.\nResponsible for quality.\nResponsible for dilivering the useful increment in each Sprint.\n Share progress &amp; remaining work.\nSelf organizing</string>
    <string name="product_owner_content">Responsible for the ROI.\nResponsible for the order.\nResponsible for the product.\n Own the Product Backlog.\n Be sure that the PBL is transparent and visible.\nBe sure the Dev. Team understand the PBL items.</string>
</resources>
